--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ PORT=3002
 # MONGO_URL=mongodb+srv://rummy:rummy@cluster0.mnmtp32.mongodb.net/
 MONGO_URL=mongodb+srv://allinone:allinone@cluster0.6lq46.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 EXPIRED_TIME=7d
-# REDIS_HOST=13.51.155.167
-REDIS_PWD=
+REDIS_HOST=89.116.121.158
+#REDIS_PWD=Rummy@Punters6#
 SECRET_KEY=6qc9U0L6cndGDoBmA4rBSxfoeVKBI3NH
 HOST_URL=http://localhost:2828
 TWILIO_ACCOUNT_SID=AC20479f8afbee452faa3cd46deb77a6c5
